--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
     <name>bd2-2020</name>
     <url>http://maven.apache.org</url>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.0.2.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>5.0.4.RELEASE</spring.version>
@@ -19,7 +25,10 @@
 
 
     <dependencies>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -50,8 +59,7 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.0.11.RELEASE</version>
         </dependency>
-
-
+        
         <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
